--- a/team/index.html
+++ b/team/index.html
@@ -160,7 +160,10 @@
 				<a href="//cerezapizza.straw.page" popup="cerezapizza.straw.page" copiable="true">
 					<img src="//s.soggy.cat/assets/images/88x31/cerezapizza-sog.gif" width="88" height="31" loading="lazy">
 				</a>
-				<a href="//yesterweb.org/no-to-web3/" popup="yesterweb.org/no-to-web3" copiable="true">
+				<a href="//forgettablename.neocities.org" popup="forgettablename.neocities.org" copiable="true">
+					<img src="//s.soggy.cat/assets/images/88x31/forgettablename-sog.gif" width="88" height="31" loading="lazy">
+				</a>
+				<a href="//yesterweb.org/no-to-web3" popup="yesterweb.org/no-to-web3" copiable="true">
 					<img src="//s.soggy.cat/assets/images/88x31/yesterweb-web3.gif" width="88" height="31" loading="lazy">
 				</a>
 				<div style="position:relative;width:88px;height:31px;display:inline-block;">
