another button + remove some buggy stuff

--- a/team/index.html
+++ b/team/index.html
@@ -36,12 +36,12 @@
 			<source src="assets/videos/cocaine.mp4" type="video/mp4">
 		</video>
 
-		<div class="discord">
+		<!--div class="discord">
 			<widgetbot server="992118472454717530" channel="992118472907698269" class="widgetbot noclose"></widgetbot>
 			<a class="close dbutton">✕</a>
 			<a class="join dbutton" href="https://soggy.world" target="_blank">↗</a>
 			<script src="assets/static/widgetbot.js"></script>
-		</div>
+		</div-->
 
 		<div class="lol">
 			<img class="lolimg" src="assets/images/devtools.webp" draggable="false">
@@ -129,7 +129,7 @@
 						<img src="assets/svgs/xitter.svg" class="icon">
 						<span>twitter&#46;&#46;</span>
 					</a>
-					<a class="button b2">
+					<a class="button b2" href="https://soggy.world" target="_blank">
 						<img src="assets/svgs/discord.svg" class="icon">
 						<span>discord</span>
 					</a>
@@ -162,6 +162,9 @@
 				</a>
 				<a href="//forgettablename.neocities.org" popup="forgettablename.neocities.org" copiable="true">
 					<img src="//s.soggy.cat/assets/images/88x31/forgettablename-sog.gif" width="88" height="31" loading="lazy">
+				</a>
+				<a href="//xpvm.net" popup="xpvm.net" copiable="true">
+					<img src="assets/images/88x31/neptune-goog.gif" width="88" height="31" loading="lazy">
 				</a>
 				<a href="//yesterweb.org/no-to-web3" popup="yesterweb.org/no-to-web3" copiable="true">
 					<img src="//s.soggy.cat/assets/images/88x31/yesterweb-web3.gif" width="88" height="31" loading="lazy">
