--- a/website/team/index.html
+++ b/website/team/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- nothing?? -->
 	<title>the squad...</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
@@ -37,13 +36,6 @@
 	<video playsinline class="cocaine">
 		<source src="/static/ssoggycat/team/videos/cocaine.mp4" type="video/mp4"/>
 	</video>
-
-	<div class="discord">
-		<widgetbot server="992118472454717530" channel="992118472907698269" class="widgetbot noclose"></widgetbot>
-		<a class="close dbutton">✕</a>
-		<a class="join dbutton" href="https://soggy.world" target="discordTarget">↗</a>
-		<script src="/static/other/team/web/widgetbot.js"></script>
-	</div>
 
 	<div class="lol">
 		<img class="lolimg" src="/static/ssoggycat/team/images/devtools.webp" draggable="false"/>
@@ -161,6 +153,9 @@
 			</a>
 			<a href="https://cerezapizza.straw.page" popup="cerezapizza.straw.page" copiable="true">
 				<img src="/static/other/team/images/88x31/cerezapizza-sog.gif" width="88" height="31" loading="lazy"/>
+			</a>
+			<a href="//forgettablename.neocities.org" popup="forgettablename.neocities.org" copiable="true">
+				<img src="//s.soggy.cat/assets/images/88x31/forgettablename-sog.gif" width="88" height="31" loading="lazy">
 			</a>
 			<a href="https://yesterweb.org/no-to-web3/" popup="yesterweb.org/no-to-web3" copiable="true">
 				<img src="/static/other/team/images/88x31/yesterweb-web3.gif" width="88" height="31" loading="lazy"/>
