--- a/website/team/index.html
+++ b/website/team/index.html
@@ -142,23 +142,23 @@
 		<!-- https not enforced as these are meant to be linked on other websites -->
 		<div class="footerb">
 			<a href="https://s.soggy.cat" popup="s.soggy.cat" copiable="true">
-				<img src="/static/ssoggycat/team/images/88x31/ssoggycat-button.gif" width="88" height="31" loading="lazy"/>
+				<img src="//static.soggy.cat/ssoggycat/team/images/88x31/ssoggycat-button.gif" width="88" height="31" loading="lazy"/>
 			</a>
 			<a href="https://s.soggy.cat" popup="s.soggy.cat (outdated)" copiable="true">
-				<img src="/static/ssoggycat/team/images/88x31/ssoggycat-button-old.gif" width="88" height="31" loading="lazy"/>
+				<img src="//static.soggy.cat/ssoggycat/team/images/88x31/ssoggycat-button-old.gif" width="88" height="31" loading="lazy"/>
 			</a>
 			<a href="https://s.soggy.cat" popup="s.soggy.cat" copiable="true">
-				<img class="gbh" src="/static/ssoggycat/team/images/88x31/ssoggycat-gameboyhorror-static.gif" width="88" height="31" loading="lazy"/>
+				<img class="gbh" src="//static.soggy.cat/ssoggycat/team/images/88x31/ssoggycat-gameboyhorror-static.gif" width="88" height="31" loading="lazy"/>
 				<style>.gbh:hover{content:url("/static/ssoggycat/team/images/88x31/ssoggycat-gameboyhorror.gif")}</style>
 			</a>
 			<a href="https://cerezapizza.straw.page" popup="cerezapizza.straw.page" copiable="true">
-				<img src="/static/other/team/images/88x31/cerezapizza-sog.gif" width="88" height="31" loading="lazy"/>
+				<img src="//static.soggy.cat/other/team/images/88x31/cerezapizza-sog.gif" width="88" height="31" loading="lazy"/>
 			</a>
 			<a href="//forgettablename.neocities.org" popup="forgettablename.neocities.org" copiable="true">
-				<img src="//s.soggy.cat/assets/images/88x31/forgettablename-sog.gif" width="88" height="31" loading="lazy">
+				<img src="//static.soggy.cat/other/team/images/88x31/forgettablename-sog.gif" width="88" height="31" loading="lazy">
 			</a>
 			<a href="https://yesterweb.org/no-to-web3/" popup="yesterweb.org/no-to-web3" copiable="true">
-				<img src="/static/other/team/images/88x31/yesterweb-web3.gif" width="88" height="31" loading="lazy"/>
+				<img src="//static.soggy.cat/other/team/images/88x31/yesterweb-web3.gif" width="88" height="31" loading="lazy"/>
 			</a>
 			<iframe class="increment" src="https://incr.easrng.net/badge?key=sog" width="88" height="31" frameborder="0" loading="lazy"></iframe>
 		</div>
