Haha Yeah Definitely Fixed Yes Yeah

--- a/website/team/index.html
+++ b/website/team/index.html
@@ -23,10 +23,7 @@
 	<link rel="stylesheet" href="team.css"/>
 </head>
 <body>
-
-	<!-- simply hide js-dependent elements and voila!!
-		not the best or the most original approach but it's definitely easier than rewriting a bunch of code 😭 -->
-
+	
 	<noscript>
 		<style>
 			.intro, .ghost, .b4, .volumeslider, .sogs {display: none}
@@ -113,7 +110,7 @@
 					<span class="smalltext padtop">shobe</span>
 				</a>
 				<a class="small buddy" style="width:50px" href="https://x.com/_ktg5" target="ktgTarget">
-					<img src="assets/images/pfp/ktg.webp" width="64" height="64" alt="ktg5">
+					<img src="/static/other/team/images/pfp/ktg.webp" width="64" height="64" alt="ktg5">
 					<span class="smalltext padtop">kyle</span>
 				</a>
 			</div>
@@ -123,7 +120,7 @@
 					<img src="/static/other/team/svgs/xitter.svg" class="icon"/>
 					<span>twitter&#46;&#46;</span>
 				</a>
-				<a class="button b2">
+				<a class="button b2" href="https://soggy.world" target="discordTarget">
 					<img src="/static/other/team/svgs/discord.svg" class="icon"/>
 					<span>discord</span>
 				</a>
@@ -156,6 +153,9 @@
 			</a>
 			<a href="//forgettablename.neocities.org" popup="forgettablename.neocities.org" copiable="true">
 				<img src="//static.soggy.cat/other/team/images/88x31/forgettablename-sog.gif" width="88" height="31" loading="lazy">
+			</a>
+			<a href="//xpvm.net" popup="xpvm.net" copiable="true">
+				<img src="//static.soggy.cat/other/team/images/88x31/neptune-goog.gif" width="88" height="31" loading="lazy">
 			</a>
 			<a href="https://yesterweb.org/no-to-web3/" popup="yesterweb.org/no-to-web3" copiable="true">
 				<img src="//static.soggy.cat/other/team/images/88x31/yesterweb-web3.gif" width="88" height="31" loading="lazy"/>
