sobbing on the floor (a lot of this won't work)

--- a/website/404.html
+++ b/website/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 
 <!-- https://bsky.app/profile/wukko.me/post/3lgnhf7crvs2s -->
- 
+
 <html lang="en">
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimal-ui">
   <title>&nbsp;</title>
-  <link rel="icon" type="image/x-icon" href="https://soggy.cat/assets/svgs/blank.svg">
+  <link rel="icon" type="image/x-icon" href="https://soggy.cat/static/other/shared/svgs/blank.svg">
 
   <meta itemprop="name" content="404">
   <meta itemprop="description" content="this page doesn't even exist man!! scram">
@@ -105,7 +105,7 @@
     ) {location.href = "https://soggy.cat/404"}
 
     document.addEventListener("DOMContentLoaded", function() {
-      
+
       const video = document.querySelector(".video");
       const audio = document.querySelector(".audio");
 
@@ -157,8 +157,8 @@
 
       track.mode = 'hidden';
       track.oncuechange = () => {
-        const cue = track.activeCues[0]; 
-        if (cue) {subtitles.innerHTML = cue.text} 
+        const cue = track.activeCues[0];
+        if (cue) {subtitles.innerHTML = cue.text}
         else {subtitles.innerHTML = ""}
       };
       video.onended = () => {
@@ -214,7 +214,7 @@
         audio.currentTime = video.currentTime;
       }
     });
-    
+
   </script>
 
 </head>
@@ -222,28 +222,28 @@
 
   <div class="waiting">
 
-    <img class="paw" width="50px" draggable="false" src="../assets/images/paw.png">
+    <img class="paw" width="50px" draggable="false" src="https://soggy.cat/static/ssoggycat/team/images/paw.png">
     <a class="atext">click to play</a>
 
     <a class="amini">huh? why is this needed?</a>
     <audio class="audio2">
-      <source src="../assets/audio/fanfare.opus" type="audio/ogg">
+      <source src="https://soggy.cat/static/other/main/audio/fanfare.opus" type="audio/ogg">
     </audio>
 
   </div>
-  <img class="dilemma" draggable="false" src="../assets/images/autoplay.webp">
+  <img class="dilemma" draggable="false" src="https://soggy.cat/static/ssoggycat/team/images/autoplay.webp">
 
   <a class="bgtext">404</a>
 
   <video class="video" controls preload="metadata">
-    <source src="../assets/videos/404.mp4" type="video/mp4">
-    <track label="English" kind="subtitles" srclang="en" src="../assets/static/404.vtt" default>
+    <source src="https://soggy.cat/static/other/shared/videos/404.mp4" type="video/mp4">
+    <track label="English" kind="subtitles" srclang="en" src="https://soggy.cat/static/other/shared/other/404.vtt" default>
   </video>
   <canvas id="canvas"></canvas>
   <div class="subtitles"></div>
 
   <audio class="audio">
-    <source src="../assets/audio/fromthestart.opus" type="audio/ogg">
+    <source src="https://soggy.cat/static/other/main/audio/fromthestart.opus" type="audio/ogg">
   </audio>
 
 </body>
