--- a/website/index.html
+++ b/website/index.html
@@ -47,7 +47,7 @@
 			</div>
 		</a>
 
-		<div class="disappointment">
+		<div class="disappointment" style="display:none">
 			<img title='"i ate my goog cube dont tell anyone"
 	- @leon_jajko1 on twitter, 2025, to @ssoggycat'
 				class="sm-button" src="/static/ssoggycat/main/images/consume.webp" width="200" height="189" loading="lazy" decoding="async"/>
