--- a/website/nocss.html
+++ b/website/nocss.html
@@ -7,9 +7,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta property="og:title" content="soggy cat">
 	<meta property="og:description" content="a picture of a wet cat inside a bathtub.">
-	<meta property="og:image" content="/assets/images/soggycat.webp">
+	<meta property="og:image" content="/img/soggycat.jpg">
 </head>
 <body role="main">
-	<img src="/assets/images/soggycat.jpg" width="100%" height="100%" alt="a picture of a wet cat inside a bathtub.">
+	<img src="/img/soggycat.jpg" width="100%" height="100%" alt="a picture of a wet cat inside a bathtub.">
 </body>
 </html>
