--- a/website/team/ring/index.html
+++ b/website/team/ring/index.html
@@ -4,8 +4,7 @@
 		<title>soggy cat webring</title>
 		<meta charset="UTF-8">
 
-		<meta property="og:image" content="../assets/images/embed.gif">
-		<link rel="icon" type="image/x-icon" href="../assets/svgs/blank.svg">
+		<link rel="icon" type="image/x-icon" href="https://soggy.cat/static/other/shared/svgs/blank.svg">
 
 		<meta itemprop="name" content="soggy cat webring">
 		<meta itemprop="description" content="the BEST page ever please clicky click..">
@@ -14,19 +13,19 @@
 	</head>
 	<body>
 
-		<div class="wip"><div class="wipt">THIS ISN'TD ONE YET I FORGOT TO DO IT GO AWAY</div></div>
-	
+		<div class="wip"><div class="wipt">THIS ISN'TD ONE AT ALL I FORGOT TO DO IT GO AWAY</div></div>
+
 		<div class="ring" id="ring"></div>
-		<audio id="meow-" style="display:none" src="../assets/audio/meow.mp3" preload="auto"></audio>
+		<audio id="meow-" style="display:none" src="/static/ssoggycat/team/audio/meow.mp3" preload="auto"></audio>
 
 		<div class="sogs">
-			<a class="waddle sogone" href="#" data-sog><img src="../assets/images/sog.webp"></a>
-			<a class="waddle sogtwo" href="#" data-sog><img src="../assets/images/sog.webp"></a>
-			<a class="waddle sogthree" href="#" data-sog><img src="../assets/images/sog.webp"></a>
+			<a class="waddle sogone" href="#" data-sog><img src="/static/ssoggycat/team/images/sog.webp"></a>
+			<a class="waddle sogtwo" href="#" data-sog><img src="/static/ssoggycat/team/images/sog.webp"></a>
+			<a class="waddle sogthree" href="#" data-sog><img src="/static/ssoggycat/team/images/sog.webp"></a>
 		</div>
 
 		<h1>soggy ring</h1>
-		<a style="padding-left:20px;padding-right:20px">ever wanted to publicly express your gratitude to soggy cat, the ruler of the universe?</a>	
+		<a style="padding-left:20px;padding-right:20px">ever wanted to publicly express your gratitude to soggy cat, the ruler of the universe?</a>
 		<br>
 		<a>~ well<i> now you can!!</i> ~</a>
 		<a><sup>not like you couldn't do that before through any other form.. um</sup></a>
@@ -38,7 +37,7 @@
 			</div>
 			<div class="box">
 				<h2>members</h2>
-				<br><img src="../assets/images/tumbleweed.gif" width="125px"><br>
+				<br><img src="/static/ssoggycat/team/images/tumbleweed.gif" width="125px"><br>
 				<div>
 					<!--a>ssoggycat – <a href="https://s.soggy.cot">s.soggy.cot</a></a> <br-->
 				</div>
