--- a/website/video.html
+++ b/website/video.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=1024, height=768, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimal-ui">
 
 	<meta name="description" content="video"/>
-	<meta property="og:image" content="/assets/images/preview.gif"/>
+	<meta property="og:image" content="/static/ssoggycat/main/images/preview.gif"/>
 	<meta property="og:type" content="video.other"/>
-	<meta property="og:video:url" content="/assets/videos/dance.mp4"/>
+	<meta property="og:video:url" content="/static/ssoggycat/shared/videos/dance.mp4"/>
 	<meta property="og:video:height" content="972"/>
 	<meta property="og:video:width" content="718"/>
 	<meta http-equiv="refresh" content="0; url='/'"/>
