--- a/website/wii/dry/index.html
+++ b/website/wii/dry/index.html
@@ -10,6 +10,6 @@
   <meta property="og:image" content="/assets/images/dry.jpg">
 </head>
 <body>
-     <img src="/assets/images/dry.jpg" width="50%"/>
+     <img src="/static/ssoggycat/dry/images/dry.jpg" width="50%"/>
 </body>
 </html>
