--- a/website/billy/nocss/index.html
+++ b/website/billy/nocss/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="/billy/icon.webp">
+  <link rel="icon" href="/static/other/billy/images/icon.webp">
   <title>billy...</title>
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -10,6 +10,6 @@
   <meta property="og:image" content="/assets/images/billy.webp">
 </head>
 <body>
-  <img src="/assets/images/billy.webp" width="50%" alt='a picture of a cat named billy.'>
+  <img src="/static/other/billy/images/billy.webp" width="50%" alt='a picture of a cat named billy.'>
 </body>
 </html>
