--- a/website/discord.html
+++ b/website/discord.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>soggy discord, outdated-ish</title>
+	<title>soggy discord redirect, outdated-ish</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
 	<meta charset="UTF-8"/>
