--- a/website/team/dark.html
+++ b/website/team/dark.html
@@ -3,15 +3,15 @@
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
   <title> &ZeroWidthSpace; </title>
-  <link rel="icon" type="image/x-icon" href="assets/svgs/blank.svg">
+  <link rel="icon" type="image/x-icon" href="https://soggy.cat/static/other/shared/svgs/blank.svg">
 </head>
 
 <body>
 
   <div id="center">
     <div class="sog">
-      <img class="sog1" src="assets/images/dark/darksog.webp">
-      <img class="sog2" src="assets/images/dark/brightsog.webp">
+      <img class="sog1" src="/static/ssoggycat/team/images/dark/darksog.webp">
+      <img class="sog2" src="/static/ssoggycat/team/images/dark/brightsog.webp">
     </div>
   </div>
 
@@ -33,7 +33,7 @@
     .sog img {
       position: absolute; object-fit: contain;
       height: 100%; width: 100%;
-      
+      user-select: none; -webkit-user-drag: none; pointer-events: none;
     }
     .sog.playing .sog1 {opacity: 0}
     .sog2 {opacity: 0; z-index: 2}
@@ -41,8 +41,8 @@
   </style>
   <script>
 
-    const sog = new Audio("assets/audio/thunklit.opus");
-    const dry = new Audio("assets/audio/thunkdark.o  pus");
+    const sog = new Audio("/static/ssoggycat/team/audio/thunklit.opus");
+    const dry = new Audio("/static/ssoggycat/team/audio/thunkdark.opus");
 
     sog.volume = dry.volume = 0.5;
     sog.loop = dry.loop = false;
