--- a/website/team/death.html
+++ b/website/team/death.html
@@ -5,12 +5,12 @@
 		<title>&#65279;</title>
 		<meta property="og:title" content="AAHGHHHH HELP HELP!!!!!" />
 		<meta name="description" content="ITS SNOWINNGGG!!! AHHH!!!!" />
-		<link rel="icon" href="old/assets/images/soggymask.webp" />
+		<link rel="icon" href="/team/old/assets/images/soggymask.webp" />
 	</head>
 
 	<body style="overflow: hidden; margin: 0px; padding: 0px; background-color:black;">
 		<video id="video" style="width:100%; height:100%; position: absolute;" controls loop playsinline>
-			<source src="/assets/videos/death.webm" type="video/webm">
+			<source src="/static/ssoggycat/team/videos/death.webm" type="video/webm">
 			whoops no video get better browser
 			</video>
 	</body>
