--- a/website/team/index.html
+++ b/website/team/index.html
@@ -8,7 +8,11 @@
 
 	<meta name="description" content="hello"/>
 
+	<meta property="og:type" content="image"/>
 	<meta property="og:image" content="/static/ssoggycat/team/images/embed.gif"/>
+	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:image" content="/static/ssoggycat/team/images/embed.gif"/>
+
 	<link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'/>"/>
 
 	<meta itemprop="name" content="ssoggycat"/>
@@ -23,7 +27,7 @@
 	<link rel="stylesheet" href="team.css"/>
 </head>
 <body>
-	
+
 	<noscript>
 		<style>
 			.intro, .ghost, .b4, .volumeslider, .sogs {display: none}
