--- a/website/cube/index.html
+++ b/website/cube/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- 🏳️‍⚧️ trans right are pretty cool 🏳️‍⚧️ -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -144,7 +145,7 @@
 				<img src="https://soggy.cat/static/other/sidemenu/svgs/upload.svg" width="15" height="15" loading="lazy" decoding="async">
 				<p>upload</p>
 			</div>
-		</a>  
+		</a>
     -->
 		<div class="i_stole_this_field_from_main_page_and_i_do_not_care" style="display:none">
 			<img title='"yippee"
