--- a/website/cube/index.html
+++ b/website/cube/index.html
@@ -133,6 +133,21 @@
 	<!-- sogmenu -->
 
 	<div id="sidemenu" class="sm sm-closed" inert>
+
+		<a aria-label="home" href="https://soggy.cat/">
+			<div class = "sm-button">
+				<img src="https://soggy.cat/static/other/sidemenu/svgs/home.svg" width="15" height="15" loading="lazy" decoding="async">
+				<p>homepage</p>
+			</div>
+		</a>
+
+		<a aria-label="cool" href="https://s.soggy.cat/">
+			<div class = "sm-button">
+				<img src="assets/soggy_circle.png" width="15" height="15" loading="lazy" decoding="async">
+				<p>sog gang</p>
+			</div>
+		</a>
+
 		<a aria-label="code" href="https://soggy.cat/github" target="GithubTarget">
 			<div class = "sm-button">
 				<img src="https://soggy.cat/static/other/sidemenu/svgs/code.svg" width="15" height="15" loading="lazy" decoding="async">
