add link to post for the hidden sog (hopefully credit enough)

--- a/website/cube/index.html
+++ b/website/cube/index.html
@@ -162,6 +162,7 @@
 			</div>
 		</a>
     -->
+		<!-- source: https://discord.com/channels/992118472454717530/1010912727985836113/1398718599530811464  -->
 		<div class="i_stole_this_field_from_main_page_and_i_do_not_care" style="display:none">
 			<img title='"yippee"
 	- @xavi910 on discord, 2025'
