ok add the sog doodle to there atleast too for now

--- a/website/cube/index.html
+++ b/website/cube/index.html
@@ -114,7 +114,11 @@
 
             // change images based on click count
             const faces = document.querySelectorAll('.bitchass-wet-fucking-cat-clone');
-            if (clickCounter >= 30) {
+			if (clickCounter >= 69) {
+                faces.forEach(face => {
+                    face.style.backgroundImage = "url('assets/sog.png')";
+                });
+            } else if (clickCounter >= 30) {
                 faces.forEach(face => {
                     face.style.backgroundImage = "url('assets/fuckyou.webp')";
                 });
