--- a/website/github/index.html
+++ b/website/github/index.html
@@ -10,6 +10,7 @@
 
 	<link href="github.css" rel="stylesheet"/>
 	<meta http-equiv="refresh" content="7; url='//github.com/ssoggycat/soggy.cat'"/>
+	<meta name="darkreader-lock">
 </head>
 <body>
 	<video id="video" width="1920" height="1080" style="width:100%; height:100%; position: absolute;" loop autoplay muted playsinline>
